# nbr

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Changes.md  LICENSE  README-en.md  README.md  coverage.yml
.github/: .codecov.yml  publish.yml
.github/workflows/: ci.yml  publish.yml  release-pr.yml  release.yml  test.yml
src/: config.rs  error.rs  lib.rs  log.rs  main.rs  pyproject.rs  style.rs  utils.rs  uv.rs  uv_old.rs
src/cli/: adapter.rs  cache.rs  common.rs  create.rs  docker.rs  driver.rs  env.rs  generate.rs  init.rs  mod.rs  plugin.rs  pyproject.rs  run.rs
src/cli/create/: mod.rs
src/cli/create/templates/: botpy.example  env.dev  env.prod  gitignore  readme.template
src/cli/nbfile/: bot.py  botpy.template  dockerfile.template  env.dev  env.prod
src/cli/templates/: .dockerignore  bot  compose.yml  dockerfile  dockerfile_template  env  hello.py  pre_commit_config  pyright_config  readme  ruff_config
src/cli/templates/pyproject/: tool_nonebot  tool_pyright  tool_ruff
tests/: test_adapter.rs  test_create.rs  test_env.rs  test_generate.rs  test_plugin.rs  test_pyproject.rs  test_run.rs  test_uv.rs
tests/common/: mod.rs
tests/snapshots/: test_create__create_project-2.snap  test_create__create_project-3.snap  test_create__create_project.snap  test_generate__generate_bot_file_snapshot.snap  test_uv__uv_list.snap  test_uv__uv_show_package_info.snap
