[package]
name = "nbr"
version = "0.2.3"
edition = "2024"
authors = ["fllesser <fllessive@gmail.com>"]
description = "CLI for NoneBot2 - A Rust implementation"
license = "MIT"
repository = "https://github.com/nonebot/nbr"
readme = "README.md"
keywords = ["nonebot", "cli", "chatbot", "bot", "nbr"]
categories = ["command-line-utilities"]

[[bin]]
name = "nbr"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }

# Async runtime
tokio = { version = "1.47.1", features = [
    "signal",
    "process",
    "rt-multi-thread",
    "macros",
] }

# HTTP client
reqwest = { version = "0.12.22", features = [
    "json",
    "rustls-tls",
    "stream",
], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
# serde_yaml = "0.9"

# TOML handling
toml = "0.9.5"

# Terminal UI and progress bars
indicatif = "0.18.0"
console = "0.16.0"
dialoguer = "0.11"

# Colored output
colored = "3.0.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0.15"

# Git operations
# git2 = { version = "0.20.2", default-features = false }

# Directory management
directories = "6.0"

# Regex support
regex = "1.11"

# URL parsing
# url = "2.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Config file parsing
config = "0.15.13"

# Cross-platform support
# crossterm = "0.29.0"
# File watching
notify = "8.2.0"

# System information
sysinfo = "0.37.0"

# Futures utilities
futures-util = "0.3"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "time",
    "ansi",
] }

toml_edit = "0.23.3"
tracing-core = "0.1.34"
ansi_term = "0.12"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
